# cson

./: README.md  com.github.sadhvikbathini.cson.yml  meson.build
.github/workflows/: main.yml
data/: CaptureScript.sh  code.py  com.github.sadhvikbathini.cson.desktop  com.github.sadhvikbathini.cson.metadata.xml  gschema.xml  meson.build  run.sh
p_install/: post_install.py
src/: Application.vala  HeaderBar.vala  Main.vala  Window.vala  meson.build
